tests/NormalTests/paczka1/fuzzy1/66393675.err
Error in line 11: nbWkIHhRU S511 98,8
Error in line 12: nbWkIHhRU A245 62,3
Error in line 8: NjUZ0 A634 34,8
Error in line 7: IX1IYFP0TL5 A245 89,7
